syntax = "proto3";
package archway.tracking.v1;

option go_package = "github.com/archway-network/archway/x/tracking/types";

import "gogoproto/gogo.proto";
import "archway/tracking/v1/tracking.proto";

// GenesisState defines the initial state of the tracking module.
message GenesisState {
  // params defines all the module parameters.
  Params params = 1 [
    (gogoproto.nullable) = false]
  ;
  // tx_infos defines a list of all the tracked transactions.
  repeated TxInfo tx_infos = 2 [
    (gogoproto.nullable) = false
  ];
  // contract_op_infos defines a list of all the tracked contract operations.
  repeated ContractOperationInfo contract_op_infos = 3 [
    (gogoproto.nullable) = false
  ];
}
